Correct CSS syntax and layout errors
Fix various typos and layout issues in CSS styles.

--- a/style.css
+++ b/style.css
@@ -1,1 +1,53 @@
-()
+{
+margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  display: flex;
+  flex-direction: colum;
+  min-height:100vh;
+   font family: Arial, sans-serif ;
+}
+/*Navbar fixed*/
+header{
+  psotion: fixed;
+  top: 0;
+  left: 0;
+  width: 100% ;
+  z-index: 1000;
+}
+
+.navbar {
+  display: flex;
+  justify-content: center;/*menu ditengah*/
+  align-items: center;
+  background -color: #333;
+  padding: 10px 20px;
+}
+
+navbar ul{
+  list-style: none;
+  siplay: flex;
+}
+navbar ul li{
+  margin-left: 20px;
+}
+
+navbar ul il a{
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
+.navbar ul li a. active, .navbar ul li a:hover{
+  color: #ffd700;
+}
+
+/*kasih jarak biar konten tidak ketimpa navbar*/
+mian{
+  flex: 1`;
+  padding: 100px 20px 20px; /*padding-top sesuai dengan tinggi navbar*/
+  
+}
+
+
